--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.idea/sonarlint/*
+/.idea/git_toolbox_prj.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/sonarlint.xml
+/.idea/vcs.xml
+/.idea/word-clone.iml
